--- a/theme/css/colors/yellow.css
+++ b/theme/css/colors/yellow.css
@@ -1,3 +1,10 @@
+/**
+ * WEBSITE: https://themefisher.com
+ * TWITTER: https://twitter.com/themefisher
+ * FACEBOOK: https://www.facebook.com/themefisher
+ * GITHUB: https://github.com/themefisher/
+ */
+
 /*
  * Selection color
  */
@@ -57,5 +64,4 @@
 .service-hex:hover .st1 {
   fill: #F3A36D;
 }
-
 /*# sourceMappingURL=yellow.css.map */
