--- a/source/scss/_variables.scss
+++ b/source/scss/_variables.scss
@@ -3,12 +3,12 @@
 //
 
 $font-stack: "Libre Baskerville", serif;
-$open-sans:'Open Sans', sans-serif;
+$open-sans: "Open Sans", sans-serif;
 
 //
 // Colors
 //
-$primary-color: #FA6862;
+$primary-color: #fa6862;
 $light-dark: #1e2530;
 $light: #fff;
 $text-color: #ababab;
